# post-training-and-alignment

./: .amlignore  .env.example  .gitignore  Dockerfile  README.md  environment.yaml  job_test.yaml  pyproject.toml
aml/: Dockerfile  environment.yaml  job.yaml  job_test.yaml
src/: config.yaml  eval.py  main.py  train.py
